--- a/Notebooks/index.ipynb
+++ b/Notebooks/index.ipynb
@@ -12,7 +12,7 @@
     "    <head>\n",
     "        <meta charset=\"UTF-8\">\n",
     "        <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
-    "        <title>Car_Price_prediction</title>\n",
+    "        <title>Salary Prediction</title>\n",
     "    </head>\n",
     "    \n",
     "<!-- Adding styles like colour, height, width, border to our html page -->\n",
@@ -69,7 +69,7 @@
     "\n",
     "body {\n",
     "            \n",
-    "            background-image: url(\"static/img/car.jpg\");\n",
+    "            background-image: url(\"static/img/money.jpg\");\n",
     "            background-repeat: no-repeat;\n",
     "            background-size: cover;\n",
     "            text-align: center;\n",
@@ -80,7 +80,7 @@
     "\n",
     "<body>\n",
     "\n",
-    "<h1>Salary Prediction</h1>\n",
+    "<h1>Hey Techie! What Is Your Salary Range?</h1>\n",
     "\n",
     "<div>\n",
     " <!-- Html form which will get all the values from user -->\n",
@@ -121,7 +121,7 @@
     "</div>\n",
     "    \n",
     "<!-- the predicted text -->\n",
-    "<h3>{{ prediction }}</h3>\n",
+    "<h3>{{ prediction_text }}</h3>\n",
     "\n",
     "</body>\n",
     "</html>"
